# dense

./: .gitignore  README.md  pyproject.toml  setup.py  test.py  test_metadata.py  test_metadata_standalone.py
configs/: __init__.py  barkvn50.yaml  barkvn50_sweep.yaml  config.py  curet.yaml  curet_sweep.yaml  curet_sweep_test.yaml  dtd.yaml  dtd_sweep.yaml  kthtips.yaml  kthtips2b.yaml  kthtips2b_sweep.yaml  kthtips_sweep.yaml  mnist.yaml  mnist_sweep.yaml  mnist_sweep_test.yaml  natural.yaml  natural_sweep.yaml  outex.yaml  outex_sweep.yaml  roustoumabdelmoula.yaml  roustoumabdelmoula_sweep.yaml
configs_fvcnn/: curet.yaml  curet_fc.yaml  curet_fc_sweep.yaml  curet_sweep.yaml  dtd.yaml  dtd_fc.yaml  dtd_fc_sweep.yaml  dtd_sweep.yaml  kthtips2b.yaml  kthtips2b_fc.yaml  kthtips2b_fc_sweep.yaml  kthtips2b_sweep.yaml  mnist_test.yaml  out10_fc_sweep.yaml  out10_sweep.yaml  out12_fc_sweep.yaml  out12_sweep.yaml  outex10.yaml  outex10_fc.yaml  outex12.yaml  outex12_fc.yaml
configs_wph/: caltech101.yaml  cifar.yaml  cifar_data_sweep.yaml  cifar_lr_sweep.yaml  curet.yaml  curet_fullsize_sweep.yaml  curet_hybrid_sweep.yaml  curet_hypernet_hybrid_sweep.yaml  curet_hypernet_params_sweep.yaml  curet_hypernet_sweep.yaml  curet_lr_sweep.yaml  curet_pca_sweep.yaml  curet_sweep.yaml  dtd.yaml  dtd_lr_sweep.yaml  kth-tips2.yaml  kthtips2.yaml  kthtips2_hypernet_sweep.yaml  kthtips2_lr_sweep.yaml  kthtips2_sweep.yaml  kthtips2_sweep_frozenClassifier.yaml  minc2500.yaml  minc2500_lr_sweep.yaml  minc2500_param_sweep.yaml  mnist.yaml  mnist_lr_sweep.yaml  mnist_sweep.yaml  outex10.yaml  (+8 more)
(+107 files in other folders)
