[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dense"
version = "0.1.0"
description = "Interpretable CNN model and its training utility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    
]

[tool.setuptools.packages.find]
where = ["."]
